add_executable(
        car
        main.cpp
        stdafx.h
        CCar.h
        CCar.cpp
        CCarController.h
        CCarController.cpp
)

add_executable(
        car_test
        tests/car_test.cpp
        stdafx.h
        CCar.h
        CCar.cpp
        CCarController.h
        CCarController.cpp
)
