add_executable(
        shapes
        main.cpp
        stdafx.h
        CShapeController.h
        CShapeController.cpp
        lib/Point/CPoint.h
        lib/Point/CPoint.cpp
        lib/Shapes/IShape.h
        lib/Shapes/LineSegment/CLineSegment.h
        lib/Shapes/LineSegment/CLineSegment.cpp
        lib/Shapes/SolidShapes/ISolidShape.h
        lib/Shapes/SolidShapes/Circle/CCircle.h
        lib/Shapes/SolidShapes/Circle/CCircle.cpp
        lib/Shapes/SolidShapes/Rectangle/CRectangle.h
        lib/Shapes/SolidShapes/Rectangle/CRectangle.cpp
        lib/Shapes/SolidShapes/Triangle/CTriangle.h
        lib/Shapes/SolidShapes/Triangle/CTriangle.cpp
)
